# jellyvr

./: .gitignore  Cargo.toml  README.md  example.helmrelease.yaml  flake.nix  jellyfin-openapi-stable-models-only.json
.github/: dependabot.yml
.github/workflows/: release.yml
src/: heresphere.rs  index.rs  jellyfin.rs  main.rs
