[package]
name = "jellyvr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["tracing"] }
listenfd = "1.0.1"
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3"
progenitor = "0.5.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
rand = "0.8"
regress = "0.4.1"
anyhow = "1.0.79"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = "0.1.0"
axum-extra = { version = "0.9.2", features = ["cookie", "cookie-private"] }
serde_repr = "0.1.18"
surrealdb = { version = "1.2.0", features = ["kv-rocksdb"] }
eyre = "0.6.12"
color-eyre = "0.6.2"
axum-embed = "0.1.0"
rust-embed = "8.2.0"
