[package]
name = "jellyvr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["tracing"] }
listenfd = "1"
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"
progenitor = "0.6"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
anyhow = "1"
tower-http = { version = "0.5", features = ["trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = "0.1.1"
axum-extra = { version = "0.9", features = ["cookie", "cookie-private"] }
serde_repr = "0.1.19"
surrealdb = { version = "1.4", features = ["kv-rocksdb"] }
eyre = "0.6"
color-eyre = "0.6"
axum-embed = "0.1"
rust-embed = "8.4"
